<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/overallScore" />

    <TextView
        android:id="@+id/overallScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/overallScoreValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/overallScoreText"
        android:layout_centerHorizontal="true"
        android:text="@string/numOfQuiz" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/goBack" />

    <TextView
        android:id="@+id/numOfQuizText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:text="@string/numOfQuizValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numOfQuizText"
        android:layout_centerHorizontal="true"
        android:text="@string/numOfCorrect" />

    <TextView
        android:id="@+id/numberCorrectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView5"
        android:text="@string/numOfCorrectValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/resetStatsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/goBackButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:text="@string/resetStats" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberCorrectText"
        android:layout_centerHorizontal="true"
        android:text="@string/numOfWrong" />

    <TextView
        android:id="@+id/numberWrongText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView4"
        android:text="@string/numOfWrongValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberWrongText"
        android:layout_centerHorizontal="true"
        android:text="@string/avgTimePerQuestion" />

    <TextView
        android:id="@+id/avgTimePerQuestionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView6"
        android:text="@string/avgTimePerQuestionValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>